Atualização no codigo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Personal Portfolio</title>
+    <title>Personal Portfólio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -13,7 +13,7 @@
 
 <body>
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#" class="logo">Portfólio</a>
         <i class="fa-solid fa-bars" id="menu-icon"></i>
         <nav class="navbar">
             <a href="#" class="active">Home</a>
@@ -28,16 +28,15 @@
             <h3>Olá, sou</h3>
             <h1>Mayki Silva</h1>
             <h3>Sou um <span>Programador Júnior</span></h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat tempora dolore earum eaque consequatur,
-                cumque sed, iste cupiditate commodi molestias unde eveniet asperiores quidem animi illo quis quod! Illo,
-                delectus!</p>
+            <p>Bem-vindo ao meu portfólio. Sou um aspirante a desenvolvedor apaixonado por tecnologia e programação. Aqui, você encontrará alguns
+                projetos e experiências que demonstram minha jornada e habilidades no mundo do desenvolvimento de software. 
+            </p>
             <div class="social-media">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="https://instagram.com/mayki_costa_silva"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/maykipereiradasilva"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/Maike2961/Maike_Costa"><i class="fa-brands fa-github"></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="./assests/baixados.pdf" class="btn" target="_blank" download>Download CV</a>
         </div>
         <div class="home-img">
             <img src="/img/10-profile-picture-ideas-to-make-you-stand-out.jpg" alt="">
@@ -50,11 +49,10 @@
         </div>
         <div class="about-content">
             <h2 class="heading">Sobre <span>Mim</span></h2>
-            <h3>Programador Júnior</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore impedit saepe qui tempora, veritatis
-                neque, nulla eum deleniti corrupti nostrum doloremque nihil rem ipsam voluptatem ea soluta similique.
-                Quasi, nihil?</p>
-            <a href="#" class="btn">Leia Mais</a>
+            <p>Meu nome é Mayki Pereira da Silva, tenho 24 anos, nasci em São Paulo, residente em São Paulo Capital. Sou um entusiasta de tecnologia com um forte interesse em desenvolvimento de software, soluções inovadoras e desafios que
+                me tiram da zona de conforto. Minha experiência com programação se iniciou na faculdade e desde então, tenho me dedicado a aprender
+                e aprimorar minhas habilidades em lógica de programação, linguagem e seus frameworks. O estudo é a base para o sucesso e estou no 
+                começo da minha jornada para isso.</p>
         </div>
     </section>
 
@@ -65,30 +63,28 @@
             <div class="services-box">
                 <i class="fa-solid fa-code"></i>
                 <h3>Web Development</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum suscipit numquam quos assumenda quasi
-                    optio odio ratione consequuntur veniam neque, odit aspernatur expedita aliquam vero rem commodi
-                    nostrum, exercitationem incidunt!</p>
-                <a href="#" class="btn">Leia Mais</a>
+                <p>Desenvolvimento web continua a ser uma área fundamental na tecnologia, permitindo a criação de plataformas
+                    que conectam pessoas, negócios e serviços de forma eficiente e acessível. Python, aliado ao framework Django, 
+                    se destaca como uma das melhores escolhas para o desenvolvimento web devido à sua combinação de simplicidade, 
+                    robustez e uma ampla gama de funcionalidades prontas para uso.</p>
             </div>
 
 
             <div class="services-box">
                 <i class="fa-solid fa-robot"></i>
                 <h3>Automatização</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum suscipit numquam quos assumenda quasi
-                    optio odio ratione consequuntur veniam neque, odit aspernatur expedita aliquam vero rem commodi
-                    nostrum, exercitationem incidunt!</p>
-                <a href="#" class="btn">Leia Mais</a>
+                <p>A automatização de processos é uma necessidade crescente nas empresas que buscam aumentar a eficiência, 
+                    reduzir custos e minimizar erros humanos. Python é uma das linguagens de programação mais populares para 
+                    automação devido à sua simplicidade, versatilidade e vasta gama de bibliotecas disponíveis.</p>
             </div>
 
 
             <div class="services-box">
                 <i class="fa-brands fa-android"></i>
                 <h3>App Development</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum suscipit numquam quos assumenda quasi
-                    optio odio ratione consequuntur veniam neque, odit aspernatur expedita aliquam vero rem commodi
-                    nostrum, exercitationem incidunt!</p>
-                <a href="#" class="btn">Leia Mais</a>
+                <p>O desenvolvimento de aplicativos móveis tem se tornado cada vez mais crucial à medida que os dispositivos móveis
+                    dominam o cenário digital. Flutter, um framework de código aberto desenvolvido pelo Google, junto com a linguagem Dart, 
+                    oferece uma solução poderosa para a criação de aplicativos móveis para Android e iOS a partir de uma única base de código.</p>
             </div>
         </div>
     </section>
@@ -101,7 +97,7 @@
                 <img src="/img/360_F_216983831_NiaYsNlzUPw5b4ReVZUE6j4bnkgS82yL.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Scraping</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    <p>Comming soon</p>
                     <a href=""><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
@@ -110,8 +106,8 @@
                 <img src="/img/pexels-emre-akyol-320381804-18096281.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web E-commerce</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                    <a href=""><i class="fa-regular fa-share-from-square"></i></a>
+                    <p>Comming soon</p>
+                    <a href="#"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
 
@@ -119,8 +115,8 @@
                 <img src="/img/istockphoto-1367967285-1024x1024.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Robô Bot</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit..</p>
-                    <a href=""><i class="fa-regular fa-share-from-square"></i></a>
+                    <p>Comming soon</p>
+                    <a href="#"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
 
@@ -128,8 +124,8 @@
                 <img src="/img/pexels-leeloothefirst-7873548.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>App finances</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit..</p>
-                    <a href=""><i class="fa-regular fa-share-from-square"></i></a>
+                    <p>Comming soon</p>
+                    <a href="#"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
         </div>
