--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -39,13 +39,13 @@
             <a href="./assests/baixados.pdf" class="btn" target="_blank" download>Download CV</a>
         </div>
         <div class="home-img">
-            <img src="../static/img/10-profile-picture-ideas-to-make-you-stand-out.jpg" alt="">
+            <img src="/img/10-profile-picture-ideas-to-make-you-stand-out.jpg" alt="">
         </div>
     </section>
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="../static/img/10-profile-picture-ideas-to-make-you-stand-out.jpg" alt="">
+            <img src="/img/10-profile-picture-ideas-to-make-you-stand-out.jpg" alt="">
         </div>
         <div class="about-content">
             <h2 class="heading">Sobre <span>Mim</span></h2>
@@ -94,7 +94,7 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="../static/img/360_F_216983831_NiaYsNlzUPw5b4ReVZUE6j4bnkgS82yL.jpg" alt="">
+                <img src="/img/360_F_216983831_NiaYsNlzUPw5b4ReVZUE6j4bnkgS82yL.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Scraping</h4>
                     <p>Comming soon</p>
@@ -103,7 +103,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="../static/img/pexels-emre-akyol-320381804-18096281.jpg" alt="">
+                <img src="/img/pexels-emre-akyol-320381804-18096281.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web E-commerce</h4>
                     <p>Comming soon</p>
@@ -112,7 +112,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="../static/img/istockphoto-1367967285-1024x1024.jpg" alt="">
+                <img src="/img/istockphoto-1367967285-1024x1024.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Robô Bot</h4>
                     <p>Comming soon</p>
@@ -121,7 +121,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="../static/img/pexels-leeloothefirst-7873548.jpg" alt="">
+                <img src="/img/pexels-leeloothefirst-7873548.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>App finances</h4>
                     <p>Comming soon</p>
@@ -133,17 +133,17 @@
 
     <section class="contact" id="contact">
         <h2 class="heading">Meu <span>Contato</span></h2>
-        <form href="/contact" method="post">
+        <form action="">
             <div class="input-box">
-                <input type="text" name="name" placeholder="Nome Completo" id="">
-                <input type="email" name="email" placeholder="Email" id="">
+                <input type="text" name="" placeholder="Nome Completo" id="">
+                <input type="text" name="" placeholder="Email" id="">
             </div>
 
             <div class="input-box">
-                <input type="text" name="number" placeholder="Numero de celular">
+                <input type="text" placeholder="Numero de celular">
                 <input type="text" placeholder="Email Subject">
             </div>
-            <textarea name="message" id="" cols="30" rows="10" placeholder="Sua Messagem"></textarea>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Sua Messagem"></textarea>
             <input type="submit" value="Enviar" class="btn">
         </form>
     </section>
@@ -159,7 +159,7 @@
 
     <script src="https://unpkg.com/scrollreveal"></script>
 
-    <script src="../static/js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
