--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
     </section>
 
-    <section class="contact" id="contact">
+    <!-- <section class="contact" id="contact">
         <h2 class="heading">Meu <span>Contato</span></h2>
         <form action="">
             <div class="input-box">
@@ -146,7 +146,7 @@
             <textarea name="" id="" cols="30" rows="10" placeholder="Sua Messagem"></textarea>
             <input type="submit" value="Enviar" class="btn">
         </form>
-    </section>
+    </section> -->
 
     <footer class="footer">
         <div class="footer-text">
