--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 projetos e experiências que demonstram minha jornada e habilidades no mundo do desenvolvimento de software. 
             </p>
             <div class="social-media">
-                <a href="https://instagram.com/mayki_costa_silva"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/maykipereiradasilva"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="https://github.com/Maike2961/Maike_Costa"><i class="fa-brands fa-github"></i></a>
+                <a href="https://instagram.com/mayki_costa_silva" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/maykipereiradasilva" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/Maike2961/Maike_Costa" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
             </div>
             <a href="./assests/baixados.pdf" class="btn" target="_blank" download>Download CV</a>
         </div>
@@ -96,18 +96,17 @@
             <div class="portfolio-box">
                 <img src="/img/360_F_216983831_NiaYsNlzUPw5b4ReVZUE6j4bnkgS82yL.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>Web Scraping</h4>
-                    <p>Comming soon</p>
-                    <a href=""><i class="fa-regular fa-share-from-square"></i></a>
+                    <h4>Validate CPF/CNPJ</h4>
+                    <p>Clique no ícone abaixo</p>
+                    <a href="https://github.com/Maike2961/CPF-CNPJ" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
-
             <div class="portfolio-box">
                 <img src="/img/pexels-emre-akyol-320381804-18096281.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web E-commerce</h4>
-                    <p>Comming soon</p>
-                    <a href="#"><i class="fa-regular fa-share-from-square"></i></a>
+                    <p>Clique no ícone abaixo</p>
+                    <a href="https://github.com/Maike2961/django_marketplace/" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
 
@@ -115,17 +114,17 @@
                 <img src="/img/istockphoto-1367967285-1024x1024.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Robô Bot</h4>
-                    <p>Comming soon</p>
-                    <a href="#"><i class="fa-regular fa-share-from-square"></i></a>
+                    <p>Clique no ícone abaixo</p>
+                    <a href="https://github.com/Maike2961/automacoes/" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
                 <img src="/img/pexels-leeloothefirst-7873548.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>App finances</h4>
-                    <p>Comming soon</p>
-                    <a href="#"><i class="fa-regular fa-share-from-square"></i></a>
+                    <h4>Animes Movies Display</h4>
+                    <p>Clique no ícone abaixo</p>
+                    <a href="https://github.com/Maike2961/app_animes" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
         </div>
