--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="https://www.linkedin.com/in/maykipereiradasilva" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://github.com/Maike2961/Maike_Costa" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
             </div>
-            <a href="./assests/baixados.pdf" class="btn" target="_blank" download>Download CV</a>
+            <a href="./assests/Cv.pdf_1.pdf" class="btn" target="_blank" rel="noopener noreferrer" download>Download CV</a>
         </div>
         <div class="home-img">
             <img src="/img/10-profile-picture-ideas-to-make-you-stand-out.jpg" alt="">
