alteração na foto

--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
             <a href="./assests/Cv.pdf_1.docx" class="btn" target="_blank" rel="noopener noreferrer" download>Download CV</a>
         </div>
         <div class="home-img">
-            <img src="/img/10-profile-picture-ideas-to-make-you-stand-out.jpg" alt="">
-        </div>
+            <img src="./assests/5116588c-0cac-4743-8ebd-31279c238be9.jpg">
     </section>
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/img/10-profile-picture-ideas-to-make-you-stand-out.jpg" alt="">
+            <img src="./assests/5116588c-0cac-4743-8ebd-31279c238be9.jpg" alt="">
         </div>
         <div class="about-content">
             <h2 class="heading">Sobre <span>Mim</span></h2>
