Atualização do portfolio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assests/favicon.ico" type="image/x-icon">
     <title>Personal Portfólio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -28,7 +28,7 @@
         <div class="home-content">
             <h3>Olá, sou</h3>
             <h1>Mayki Silva</h1>
-            <h3>Sou um <span>Programador Júnior</span></h3>
+            <h3>Sou <span>Assistente de Desenvolvimento de Software</span></h3>
             <p>Bem-vindo ao meu portfólio. Sou um aspirante a desenvolvedor apaixonado por tecnologia e programação. Aqui, você encontrará alguns
                 projetos e experiências que demonstram minha jornada e habilidades no mundo do desenvolvimento de software. 
             </p>
