--- a/index.html
+++ b/index.html
@@ -29,15 +29,21 @@
             <h3>Olá, sou</h3>
             <h1>Mayki Silva</h1>
             <h3>Sou <span>Assistente de Desenvolvimento de Software</span></h3>
-            <p>Bem-vindo ao meu portfólio. Sou um aspirante a desenvolvedor apaixonado por tecnologia e programação. Aqui, você encontrará alguns
-                projetos e experiências que demonstram minha jornada e habilidades no mundo do desenvolvimento de software. 
+            <p>Bem-vindo ao meu portfólio. Sou um aspirante a desenvolvedor apaixonado por tecnologia e programação.
+                Aqui, você encontrará alguns
+                projetos e experiências que demonstram minha jornada e habilidades no mundo do desenvolvimento de
+                software.
             </p>
             <div class="social-media">
-                <a href="https://instagram.com/mayki_costa_silva" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/maykipereiradasilva" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="https://github.com/Maike2961/Maike_Costa" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+                <a href="https://instagram.com/mayki_costa_silva" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/maykipereiradasilva" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/Maike2961/Maike_Costa" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-github"></i></a>
             </div>
-            <a href="./assests/Cv.pdf_1.docx" class="btn" target="_blank" rel="noopener noreferrer" download>Download CV</a>
+            <a href="./assests/Cv.pdf_1.docx" class="btn" target="_blank" rel="noopener noreferrer" download>Download
+                CV</a>
         </div>
         <div class="home-img">
             <img src="./assests/5116588c-0cac-4743-8ebd-31279c238be9.jpg">
@@ -49,42 +55,53 @@
         </div>
         <div class="about-content">
             <h2 class="heading">Sobre <span>Mim</span></h2>
-            <p>Meu nome é Mayki Pereira da Silva, tenho 24 anos, nasci em São Paulo, residente em São Paulo Capital. Sou um entusiasta de tecnologia com um forte interesse em desenvolvimento de software, soluções inovadoras e desafios que
-                me tiram da zona de conforto. Minha experiência com programação se iniciou na faculdade e desde então, tenho me dedicado a aprender
-                e aprimorar minhas habilidades em lógica de programação, linguagem e seus frameworks. O estudo é a base para o sucesso e estou no 
+            <p>Meu nome é Mayki Pereira da Silva, tenho 24 anos, nasci em São Paulo, residente em São Paulo Capital. Sou
+                um entusiasta de tecnologia com um forte interesse em desenvolvimento de software, soluções inovadoras e
+                desafios que
+                me tiram da zona de conforto. Minha experiência com programação se iniciou na faculdade e desde então,
+                tenho me dedicado a aprender
+                e aprimorar minhas habilidades em lógica de programação, linguagem e seus frameworks. O estudo é a base
+                para o sucesso e estou no
                 começo da minha jornada para isso.</p>
         </div>
     </section>
 
     <section class="services" id="services">
-        <h2 class="heading">Meus <span>Serviços</span></h2>
+        <h2 class="heading">Minhas <span>Habilidades</span></h2>
 
         <div class="services-container">
             <div class="services-box">
-                <i class="fa-solid fa-code"></i>
-                <h3>Web Development</h3>
-                <p>Desenvolvimento web continua a ser uma área fundamental na tecnologia, permitindo a criação de plataformas
-                    que conectam pessoas, negócios e serviços de forma eficiente e acessível. Python, aliado ao framework Django, 
-                    se destaca como uma das melhores escolhas para o desenvolvimento web devido à sua combinação de simplicidade, 
-                    robustez e uma ampla gama de funcionalidades prontas para uso.</p>
+                <h2>Desenvolvimento Back-End</h2>
+                <div class="liguagens">
+                    <h3>Python</h3>
+                    <p>Intermédiario</p>
+                    <h3>Flask</h3>
+                    <p>Intermédiario</p>
+                    <h3>Django</h3>
+                    <p>Básico</p>
+                    <h3>C Sharp</h3>
+                    <p>Básico</p>
+                    <h3>Git</h3>
+                    <p>Intermédiario</p>
+                    <h3>Docker</h3>
+                    <p>Básico</p>
+                </div>
             </div>
 
-
             <div class="services-box">
-                <i class="fa-solid fa-robot"></i>
-                <h3>Automatização</h3>
-                <p>A automatização de processos é uma necessidade crescente nas empresas que buscam aumentar a eficiência, 
-                    reduzir custos e minimizar erros humanos. Python é uma das linguagens de programação mais populares para 
-                    automação devido à sua simplicidade, versatilidade e vasta gama de bibliotecas disponíveis.</p>
-            </div>
-
-
-            <div class="services-box">
-                <i class="fa-brands fa-android"></i>
-                <h3>App Development</h3>
-                <p>O desenvolvimento de aplicativos móveis tem se tornado cada vez mais crucial à medida que os dispositivos móveis
-                    dominam o cenário digital. Flutter, um framework de código aberto desenvolvido pelo Google, junto com a linguagem Dart, 
-                    oferece uma solução poderosa para a criação de aplicativos móveis para Android e iOS a partir de uma única base de código.</p>
+                <h2>Desenvolvimento Front-End</h2>
+                <div class="linguagens">
+                    <h3>HTML5</h3>
+                    <p>Intermédiario</p>
+                    <h3>CSS</h3>
+                    <p>Intermédiario</p>
+                    <h3>JavaScript</h3>
+                    <p>Intermédiario</p>
+                    <h3>BootStrap</h3>
+                    <p>Básico</p>
+                    <h3>TailwindCSS</h3>
+                    <p>Básico</p>
+                </div>
             </div>
         </div>
     </section>
@@ -98,7 +115,8 @@
                 <div class="portfolio-layer">
                     <h4>Validate CPF/CNPJ</h4>
                     <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/CPF-CNPJ" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                    <a href="https://github.com/Maike2961/CPF-CNPJ" target="_blank" rel="noopener noreferrer"><i
+                            class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -106,7 +124,8 @@
                 <div class="portfolio-layer">
                     <h4>Web E-commerce</h4>
                     <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/django_marketplace/" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                    <a href="https://github.com/Maike2961/django_marketplace/" target="_blank"
+                        rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
 
@@ -115,7 +134,8 @@
                 <div class="portfolio-layer">
                     <h4>Robô Bot</h4>
                     <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/automacoes/" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                    <a href="https://github.com/Maike2961/automacoes/" target="_blank" rel="noopener noreferrer"><i
+                            class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
 
@@ -124,7 +144,8 @@
                 <div class="portfolio-layer">
                     <h4>Animes Movies Display</h4>
                     <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/app_animes" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                    <a href="https://github.com/Maike2961/app_animes" target="_blank" rel="noopener noreferrer"><i
+                            class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
         </div>
@@ -153,7 +174,7 @@
         </div>
         <div class="footer-iconTop">
             <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
-        </div>  
+        </div>
     </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
