Atualizacao na nav

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar">
             <a href="#" class="active">Home</a>
             <a href="#about">Sobre</a>
-            <a href="#services">Serviços</a>
+            <a href="#services">Habilidades</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contato</a>
         </nav>
