Alteração no h2 de habilidades

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
 
     <section class="services" id="services">
-        <h2 class="heading">Meus <span>Habilidades</span></h2>
+        <h2 class="heading">Minhas<span>Habilidades</span></h2>
         <div class="services-container">
             <div class="services-box">
                 <i class="fa-solid fa-robot"></i>
