remocao do contact

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#about">Sobre</a>
             <a href="#services">Habilidades</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contato</a>
+        <!--  <a href="#contact">Contato</a> -->
         </nav>
     </header>
     <section class="home" id="home">
@@ -75,7 +75,7 @@
                 <div class="linguas">
                     <article>
                         <p>Python</p>
-                        <span>Intermediario</span>
+                        <span>Intermediário</span>
                     </article>
 
                     <article>
@@ -84,7 +84,7 @@
                     </article>
                     <article>
                         <p>Flask</p>
-                        <span>Intermediario</span>
+                        <span>Intermediário</span>
                     </article>
                     <article>
                         <p>C Sharp</p>
@@ -92,11 +92,11 @@
                     </article>
                     <article>
                         <p>Docker</p>
-                        <span>Basico</span>
+                        <span>Básico</span>
                     </article>
                     <article>
                         <p>Git</p>
-                        <span>Intermediario</span>
+                        <span>Intermediário</span>
                     </article>
                 </div>
             </div>
@@ -107,20 +107,20 @@
                 <div class="linguas">
                     <article>
                         <p>HTML5</p>
-                        <span>Intermediario</span>
+                        <span>Intermediário</span>
                     </article>
                     <article>
                         <p>CSS</p>
-                        <span>Intermediario</span>
+                        <span>Intermediário</span>
                     </article>
 
                     <article>
                         <p>Tailwind</p>
-                        <span>Basico</span>
+                        <span>Básico</span>
                     </article>
                     <article>
                         <p>BootStrap</p>
-                        <span>Intermediario</span>
+                        <span>Intermediário</span>
                     </article>
                     <article>
                         <p>SCSS</p>
@@ -134,11 +134,11 @@
                 <div class="linguas">
                     <article>
                         <p>Flutter</p>
-                        <span>Intermediario</span>
+                        <span>Intermediário</span>
                     </article>
                     <article>
                         <p>Dart</p>
-                        <span>Intermediario</span>
+                        <span>Intermediário</span>
                     </article>
                 </div>
             </div>
