--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assests/favicon.ico" type="image/x-icon">
-    <title>Personal Portfólio</title>
+    <title>Portfólio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -27,7 +27,7 @@
     <section class="home" id="home">
         <div class="home-content">
             <h3>Olá, sou</h3>
-            <h1>Mayki Silva</h1>
+            <h1><span>M</span>ayki <span>S</span>ilva</h1>
             <h3>Sou <span>Assistente de Desenvolvimento de Software</span></h3>
             <p>Bem-vindo ao meu portfólio. Sou um aspirante a desenvolvedor apaixonado por tecnologia e programação.
                 Aqui, você encontrará alguns
@@ -150,41 +150,71 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="/img/360_F_216983831_NiaYsNlzUPw5b4ReVZUE6j4bnkgS82yL.jpg" alt="">
+                <!-- <img src="/img/360_F_216983831_NiaYsNlzUPw5b4ReVZUE6j4bnkgS82yL.jpg" alt=""> -->
+                <video autoplay muted loop>
+                    <source src="./assests/20240730113036.mp4">
+                </video>
                 <div class="portfolio-layer">
-                    <h4>Validate CPF/CNPJ</h4>
+                    <h4>Busca CEP</h4>
                     <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/CPF-CNPJ" target="_blank" rel="noopener noreferrer"><i
-                            class="fa-regular fa-share-from-square"></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="/img/pexels-emre-akyol-320381804-18096281.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web E-commerce</h4>
-                    <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/django_marketplace/" target="_blank"
-                        rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="/img/istockphoto-1367967285-1024x1024.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Chat simples com api Gemini</h4>
-                    <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/python_chat_IA" target="_blank" rel="noopener noreferrer"><i
+                    <a href="https://github.com/Maike2961/BusqueCep" target="_blank" rel="noopener noreferrer"><i
                             class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="/img/pexels-leeloothefirst-7873548.jpg" alt="">
+                <video autoplay muted loop>
+                    <source src="./assests/20240730103624.mp4">
+                </video>
                 <div class="portfolio-layer">
-                    <h4>Landing Page</h4>
+                    <h4>Coffe Dev</h4>
                     <p>Clique no ícone abaixo</p>
-                    <a href="https://barberlandingpage.netlify.app/" target="_blank" rel="noopener noreferrer"><i
-                            class="fa-regular fa-share-from-square"></i></a>
+                    <a href="https://coffedev-up.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <video autoplay muted loop>
+                    <source src="./assests/20240730105406.mp4" type="">
+                </video>
+                <div class="portfolio-layer">
+                    <h4>Api Weather</h4>
+                    <p>Clique on ícone abaixo</p>
+                    <a href="https://github.com/Maike2961/API_weather" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <video autoplay muted loop>
+                    <source src="./assests/20240730103926.mp4">
+                </video>
+                <div class="portfolio-layer">
+                    <h4>Api Imagens</h4>
+                    <p>CLique no ícone abaixo</p>
+                    <a href="https://github.com/Maike2961/Api_Photos_Galery" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <video autoplay muted loop>
+                    <source src="./assests/20240730122540.mp4">
+                </video>
+
+                <div class="portfolio-layer">
+                    <h4>Pequeno Chat com Gemini</h4>
+                    <p>Clique no ícone abaixo</p>
+                    <a href="https://github.com/Maike2961/Python_Chat_IA" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <video autoplay muted loop>
+                    <source src="./assests/20240730153315.mp4">
+                </video>
+                <div class="portfolio-layer">
+                    <h4>Automacao e envio de Email</h4>
+                    <p>Clique no ícone abaixo</p>
+                    <a href="https://github.com/Maike2961/FundoImobiliario_Email_Automatico" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
         </div>
