Adição de biblioteca type

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assests/favicon.ico" type="image/x-icon">
-    <title>Personal Portfólio</title>
+    <title>Portfólio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -21,14 +21,14 @@
             <a href="#about">Sobre</a>
             <a href="#services">Habilidades</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contato</a>
+        <!--  <a href="#contact">Contato</a> -->
         </nav>
     </header>
     <section class="home" id="home">
         <div class="home-content">
             <h3>Olá, sou</h3>
-            <h1>Mayki Silva</h1>
-            <h3>Sou <span>Assistente de Desenvolvimento de Software</span></h3>
+            <h1><span>M</span>ayki <span>S</span>ilva</h1>
+            <h3>Sou <span class="text-typed"></span></h3>
             <p>Bem-vindo ao meu portfólio. Sou um aspirante a desenvolvedor apaixonado por tecnologia e programação.
                 Aqui, você encontrará alguns
                 projetos e experiências que demonstram minha jornada e habilidades no mundo do desenvolvimento de
@@ -42,7 +42,7 @@
                 <a href="https://github.com/Maike2961/Maike_Costa" target="_blank" rel="noopener noreferrer"><i
                         class="fa-brands fa-github"></i></a>
             </div>
-            <a href="./assests/Cv.pdf_1.docx" class="btn" target="_blank" rel="noopener noreferrer" download>Download
+            <a href="./assests/cv_mayki.docx" class="btn" target="_blank" rel="noopener noreferrer" download>Download
                 CV</a>
         </div>
         <div class="home-img">
@@ -68,39 +68,82 @@
 
     <section class="services" id="services">
         <h2 class="heading">Minhas <span>Habilidades</span></h2>
-
         <div class="services-container">
             <div class="services-box">
-                <h2>Desenvolvimento Back-End</h2>
-                <div class="liguagens">
-                    <h3>Python</h3>
-                    <p>Intermédiario</p>
-                    <h3>Flask</h3>
-                    <p>Intermédiario</p>
-                    <h3>Django</h3>
-                    <p>Básico</p>
-                    <h3>C Sharp</h3>
-                    <p>Básico</p>
-                    <h3>Git</h3>
-                    <p>Intermédiario</p>
-                    <h3>Docker</h3>
-                    <p>Básico</p>
+                <i class="fa-solid fa-robot"></i>
+                <h3>Desenvolvimento Back-End</h3>
+                <div class="linguas">
+                    <article>
+                        <p>Python</p>
+                        <span>Intermediário</span>
+                    </article>
+
+                    <article>
+                        <p>Django</p>
+                        <span>Basico</span>
+                    </article>
+                    <article>
+                        <p>Flask</p>
+                        <span>Intermediário</span>
+                    </article>
+                    <article>
+                        <p>C Sharp</p>
+                        <span>Básico</span>
+                    </article>
+                    <article>
+                        <p>Docker</p>
+                        <span>Básico</span>
+                    </article>
+                    <article>
+                        <p>Git</p>
+                        <span>Intermediário</span>
+                    </article>
                 </div>
             </div>
 
             <div class="services-box">
-                <h2>Desenvolvimento Front-End</h2>
-                <div class="linguagens">
-                    <h3>HTML5</h3>
-                    <p>Intermédiario</p>
-                    <h3>CSS</h3>
-                    <p>Intermédiario</p>
-                    <h3>JavaScript</h3>
-                    <p>Intermédiario</p>
-                    <h3>BootStrap</h3>
-                    <p>Básico</p>
-                    <h3>TailwindCSS</h3>
-                    <p>Básico</p>
+                <i class="fa-solid fa-robot"></i>
+                <h3>Desenvolvimento Front-End</h3>
+                <div class="linguas">
+                    <article>
+                        <p>HTML5</p>
+                        <span>Intermediário</span>
+                    </article>
+                    <article>
+                        <p>CSS</p>
+                        <span>Intermediário</span>
+                    </article>
+
+                    <article>
+                        <p>Tailwind</p>
+                        <span>Básico</span>
+                    </article>
+                    <article>
+                        <p>BootStrap</p>
+                        <span>Intermediário</span>
+                    </article>
+                    <article>
+                        <p>SCSS</p>
+                        <span>Intermediário</span>
+                    </article>
+                    <article>
+                        <p>Angular</p>
+                        <span>Basico</span>
+                    </article>
+                </div>
+            </div>
+            <div class="services-box">
+                <i class="fa-solid fa-robot"></i>
+                <h3>Desenvolvimento Mobile</h3>
+                <div class="linguas">
+                    <article>
+                        <p>Flutter</p>
+                        <span>Intermediário</span>
+                    </article>
+                    <article>
+                        <p>Dart</p>
+                        <span>Intermediário</span>
+                    </article>
                 </div>
             </div>
         </div>
@@ -111,41 +154,71 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="/img/360_F_216983831_NiaYsNlzUPw5b4ReVZUE6j4bnkgS82yL.jpg" alt="">
+                <!-- <img src="/img/360_F_216983831_NiaYsNlzUPw5b4ReVZUE6j4bnkgS82yL.jpg" alt=""> -->
+                <video autoplay muted loop>
+                    <source src="./assests/20240730113036.mp4">
+                </video>
                 <div class="portfolio-layer">
-                    <h4>Validate CPF/CNPJ</h4>
+                    <h4>Busca CEP</h4>
                     <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/CPF-CNPJ" target="_blank" rel="noopener noreferrer"><i
-                            class="fa-regular fa-share-from-square"></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="/img/pexels-emre-akyol-320381804-18096281.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web E-commerce</h4>
-                    <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/django_marketplace/" target="_blank"
-                        rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="/img/istockphoto-1367967285-1024x1024.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>Robô Bot</h4>
-                    <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/automacoes/" target="_blank" rel="noopener noreferrer"><i
+                    <a href="https://github.com/Maike2961/BusqueCep" target="_blank" rel="noopener noreferrer"><i
                             class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="/img/pexels-leeloothefirst-7873548.jpg" alt="">
+                <video autoplay muted loop>
+                    <source src="./assests/20240730103624.mp4">
+                </video>
                 <div class="portfolio-layer">
-                    <h4>Animes Movies Display</h4>
+                    <h4>Coffe Dev</h4>
                     <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/app_animes" target="_blank" rel="noopener noreferrer"><i
-                            class="fa-regular fa-share-from-square"></i></a>
+                    <a href="https://coffedev-up.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <video autoplay muted loop>
+                    <source src="./assests/20240730105406.mp4" type="">
+                </video>
+                <div class="portfolio-layer">
+                    <h4>Api Weather</h4>
+                    <p>Clique on ícone abaixo</p>
+                    <a href="https://github.com/Maike2961/API_weather" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <video autoplay muted loop>
+                    <source src="./assests/20240730103926.mp4">
+                </video>
+                <div class="portfolio-layer">
+                    <h4>Api Imagens</h4>
+                    <p>CLique no ícone abaixo</p>
+                    <a href="https://github.com/Maike2961/Api_Photos_Galery" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <video autoplay muted loop>
+                    <source src="./assests/20240730122540.mp4">
+                </video>
+
+                <div class="portfolio-layer">
+                    <h4>Pequeno Chat com Gemini</h4>
+                    <p>Clique no ícone abaixo</p>
+                    <a href="https://github.com/Maike2961/Python_Chat_IA" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <video autoplay muted loop>
+                    <source src="./assests/20240730153315.mp4">
+                </video>
+                <div class="portfolio-layer">
+                    <h4>Automacao e envio de Email</h4>
+                    <p>Clique no ícone abaixo</p>
+                    <a href="https://github.com/Maike2961/FundoImobiliario_Email_Automatico" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
         </div>
@@ -178,6 +251,8 @@
     </footer>
 
     <script src="https://unpkg.com/scrollreveal"></script>
+
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
     <script src="main.js"></script>
 </body>
