feat: add projeto com angular

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                         class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/maykipereiradasilva" target="_blank" rel="noopener noreferrer"><i
                         class="fa-brands fa-linkedin-in"></i></a>
-                <a href="https://github.com/Maike2961/Maike_Costa" target="_blank" rel="noopener noreferrer"><i
+                <a href="https://github.com/Maike2961" target="_blank" rel="noopener noreferrer"><i
                         class="fa-brands fa-github"></i></a>
             </div>
-            <a href="./assests/novo_cv_mayki .docx" class="btn" target="_blank" rel="noopener noreferrer" download>Download
+            <a href="./assests/cv_mayki-1.docx" class="btn" target="_blank" rel="noopener noreferrer" download>Download
                 CV</a>
         </div>
         <div class="home-img">
@@ -215,6 +215,18 @@
                     <h4>Automacao e envio de Email</h4>
                     <p>Clique no ícone abaixo</p>
                     <a href="https://github.com/Maike2961/FundoImobiliario_Email_Automatico" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <video autoplay muted loop>
+                    <source src="./assests/20240924151150.mp4">
+                </video>
+
+                <div class="portfolio-layer">
+                    <h4>Lista de Musicas com Angular</h4>
+                    <p>Clique no ícone abaixo</p>
+                    <a href="https://github.com/Maike2961/Angular_MusicsList" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
         </div>
