--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
             <a href="#about">Sobre</a>
             <a href="#services">Habilidades</a>
             <a href="#portfolio">Portfolio</a>
-        <!--  <a href="#contact">Contato</a> -->
-        <!--  <a href="#contact">Contato</a> -->
         </nav>
     </header>
     <section class="home" id="home">
@@ -43,7 +41,7 @@
                 <a href="https://github.com/Maike2961" target="_blank" rel="noopener noreferrer"><i
                         class="fa-brands fa-github"></i></a>
             </div>
-            <a href="./assests/cv_mayki-1.docx" class="btn" target="_blank" rel="noopener noreferrer" download>Download
+            <a href="./assests/cv_mayki.docx" class="btn" target="_blank" rel="noopener noreferrer" download>Download
                 CV</a>
         </div>
         <div class="home-img">
@@ -85,10 +83,6 @@
                     <article>
                         <p>Flask</p>
                         <span>Intermediário</span>
-                    </article>
-                    <article>
-                        <p>C Sharp</p>
-                        <span>Básico</span>
                     </article>
                     <article>
                         <p>Docker</p>
@@ -154,7 +148,6 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <!-- <img src="/img/360_F_216983831_NiaYsNlzUPw5b4ReVZUE6j4bnkgS82yL.jpg" alt=""> -->
                 <video autoplay muted loop>
                     <source src="./assests/20240730113036.mp4">
                 </video>
